fix with overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   font-family: 'Open Sans', sans-serif;
   background-color: #ffb997;
   max-width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
   position: relative;
